# cabal-foreign-library

./: Cargo.toml  README.md
.github/workflows/: test.yml
crates/cabal-foreign-library/: Cargo.toml  README.md
crates/cabal-foreign-library/src/: error.rs  lib.rs  util.rs
crates/example-foo/: Cargo.toml  README.md  build.rs  example-foo.cabal
crates/example-foo/rust/: main.rs
crates/example-foo/src/: Lib.hs
crates/haskell-rts/: Cargo.toml  example-foo.cabal
crates/haskell-rts/src/: lib.rs
crates/haskell-rts/src/haskell/: Lib.hs
examples/basic/: Cargo.toml  README.md  example-basic.cabal
examples/basic/rust/: lib.rs  main.rs
