[package]
name = "cabal-foreign-library"
version = "0.1.2"
authors = ["Eric Zhao <21zhaoe@protonmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/mirryi/cabal-foreign-library"
repository = "https://github.com/mirryi/cabal-foreign-library"
documentation = "https://docs.rs/cabal-foreign-library"
description = """
A library for Cargo build scripts to build and link a Cabal foreign-library as a Rust crate.
"""
edition = "2021"
rust-version = "1.70.0"

[dependencies]
bindgen = "0.70"
camino = "1.1"
regex = "1.11"
thiserror = "2.0"
which = "7.0"
