cabal-version:      3.0
name:               haskell-rts
version:            0.1.0.0
license:            MIT OR Apache-2.0
author:             Eric Zhao
maintainer:         21zhaoe@protonmail.com
build-type:         Simple

common warnings
    ghc-options: -Wall

foreign-library haskell-rts
    type:             native-shared
    other-modules:    Lib
    build-depends:
        base ^>=4.17.2.1
    hs-source-dirs:   src/haskell
    default-language: Haskell2010
